--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "nodemon": "^3.1.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
